[gd_scene load_steps=6 format=3 uid="uid://cklgq1yqdgf2s"]

[ext_resource type="Theme" uid="uid://dksvrshxgc4ql" path="res://theme/Signpost.tres" id="1_f1450"]
[ext_resource type="Script" path="res://prefabs/UI/ItemMenu/ListItem.gd" id="2_m3cx0"]
[ext_resource type="Texture2D" uid="uid://djabbytj2gbyw" path="res://assets/item/i_acorn.png" id="2_qxj6x"]
[ext_resource type="Texture2D" uid="uid://bdqemmusx4053" path="res://assets/ui/Gald_Symbol.png" id="3_ybu0t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0kefi"]

[node name="ListItem" type="MarginContainer"]
offset_right = 384.0
offset_bottom = 29.0
focus_mode = 2
theme = ExtResource("1_f1450")
script = ExtResource("2_m3cx0")

[node name="Background" type="Panel" parent="."]
layout_mode = 2
theme = ExtResource("1_f1450")

[node name="FlowContainer" type="FlowContainer" parent="."]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2

[node name="SpriteBox" type="MarginContainer" parent="FlowContainer"]
custom_minimum_size = Vector2(35, 37)
layout_mode = 2

[node name="ItemSprite" type="Sprite2D" parent="FlowContainer/SpriteBox"]
position = Vector2(5, 5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qxj6x")
centered = false

[node name="ItemName" type="RichTextLabel" parent="FlowContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_f1450")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0kefi")
bbcode_enabled = true
text = "[b]Item Name Here[/b] x1"
fit_content = true

[node name="RightAlign" type="FlowContainer" parent="FlowContainer"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 1
vertical = true

[node name="ItemInfo" type="Label" parent="FlowContainer/RightAlign"]
layout_mode = 2
text = "100"

[node name="GaldSymbol" type="MarginContainer" parent="FlowContainer/RightAlign"]
custom_minimum_size = Vector2(14, 25)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="FlowContainer/RightAlign/GaldSymbol"]
position = Vector2(7, 11)
scale = Vector2(2, 2)
texture = ExtResource("3_ybu0t")
